# crew-ai

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.py  deploy_runpod.sh  engine.py  exclude_ssh.txt  gen_flamegraph.sh  ngrok_config.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_web.txt  rsync_exclude.txt  rsync_include.txt  runpod_sync.sh  test_models.py
app/: engine.py  engine_cli.py  settings.py  state.py  tasks.py  test_engine.py  test_tasks.py  test_types.py  train_example.py  types.py  utils.py
models/v0/: model.onnx  settings_dict.pkl
notebooks/: aux_loss.ipynb  debug_gradients.ipynb  find_bad_examples_policy.ipynb  find_bad_examples_value.ipynb  find_examples.ipynb  find_med_tasks.ipynb  optuna_analysis.ipynb  plot_loss.ipynb  signal_probs.ipynb  task_learning.ipynb  task_learning_2.ipynb  tree_search.ipynb
src/ai/: actor.py  ai.py  aux_info.py  curriculum.py  determinization.py  embedding.py  environment.py  eval_cli.py  export_onnx.py  featurizer.py  hyperparams.py  models.py  models_example.py  multi_train.py  optimize.py  optimize2.py  optimize_ts.py  plot_nn.py  rollout.py  summary_writer.py  test_onnx.py  test_onnx2.py  train.py  train_example.py  train_private.py  tree_search.py  utils.py  win_cache.py
src/ai/tests/: test_ai.py  test_embedding.py  test_environment.py  test_featurizer.py  test_models.py  test_rollout.py
src/backend/app/: config.py  const.py  main.py  middleware.py
src/backend/app/routers/: game.py  main.py
src/backend/app/schemas/: game.py
src/backend/app/services/: ai.py  game.py
src/backend/tests/: test_game.py
src/cpp_game/: bindings.cc  engine.cc  engine.h  featurizer.h  lockfree_pool.h  rng.h  rollout.cc  rollout.h  settings.cc  settings.h  state.h  tasks.cc  tasks.h  test_rollout.cc  thread_pool.cc  thread_pool.h  tree_search.cc  tree_search.h  types.h  utils.h
src/frontend/: package.json
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/app/game/[room_id]/: constants.ts  lobby.tsx  page.tsx  play.tsx  styles.ts  utils.tsx
src/frontend/app/game/[room_id]/components/: ActionHistory.tsx  CardBox.tsx  CenterArea.tsx  GameArea.tsx  GameStatus.tsx  PlayerHand.tsx  PlayerHandle.tsx  PlayerInfo.tsx  PlayerInfoModal.tsx
src/frontend/lib/: queue.ts  types.ts
src/game/: engine.py  engine_cli.py  settings.py  state.py  tasks.py  types.py  utils.py
src/game/tests/: test_cpp_game.py  test_engine.py  test_tasks.py  test_types.py
src/lib/: types.py  utils.py
